--- a/page2/assets2/style2.css
+++ b/page2/assets2/style2.css
@@ -1,50 +1,42 @@
-body * {
-	border: 1px solid black;
+body  {
+	background-image = url(" page2/2.jpg");
 }
 
-
-
-#main {
-	display:flex;
-}
-
-#first {
-	width: 50px;
-	height:50px;
-	background-color: pink;
-	Flex-grow:1;
-	text-align:center
-}
-
-#second {
-	width: 50px;
-	height:50px;
-	background-color: coral ;
-	Flex-grow:1;
-	text-align:center
-}
-
-#third {
-	width: 50px;
-	height:50px;
-	background-color: khaki;
-	Flex-grow:1;
-	text-align:center
-}
-
-#fourth {
-	width: 50px;
-	height:50px;
-	background-color: gray;
-	Flex-grow:1;
-	text-align:center
+nav ul li  {
+	display: inline-block;
+	margin-left: 30px;
+	line-height:35px;
 	
-	
+
 }
-	
+a:hover {
+	background-color: green ;
+
 }
-div:hover {
+
+nav {
 	background-color: lightblue;
-	//width: 20px;
-	//display: inline-block;
+	height:35px;
+	
+	}
+
+nav ul #search a {
+	border: 1px solid black;
+	background-color: lightblue;
+	border-radius: 3px;
+}	
+nav ul #panier img {
+	
+	width: 20px;
+	height:20px;
+	margin-right: 10px;
+	margin-top:5px;
+}
+div {
+	float:right;
+	background-color: 142b47;
+}
+
+div a {
+	color: green;
 }
