--- a/page1/assets1/style1.css
+++ b/page1/assets1/style1.css
@@ -1,15 +1,23 @@
-*
+
+/*
 {
-	border : 1px solid;
+	border : 1px solid red;
+}
+*/
+
+body
+{
+	background-image : url(background1.png);
 }
 
 header
 {
 	display : inline-block;
-	line-height : 100px;
 	text-align: center;
 	width : 100%;
-	height : 100px;
+	height : 150px;
+	border : 2px solid BurlyWood;
+	border-radius : 10px;
 	
 }
 
@@ -17,9 +25,13 @@ main
 {
 	display : inline-block;
 	width : 49%;
+	line-height : 600px;
+	text-align: center;
+	
 	text-align: center;
 	margin-left : 1.2%;
 	height : 600px;
+	
 }
 	
 
@@ -37,6 +49,9 @@ footer
 	width : 24%;
 	text-align: center;
 	height : 600px;
+	border : 2px solid Maroon;
+	border-radius : 10px;
+	
 }
 
 .images
@@ -46,7 +61,28 @@ footer
 	width : 24%;
 	text-align: center;
 	height : 600px;
+	border : 2px solid Maroon;
+	border-radius : 10px;
+	
 }
-a:hover {
-	background-color : pink;
+
+.acceuil1
+{
+	max-width: 10%;
+	height: auto;
+
+}
+
+.logo
+{
+	display: inline;
+	max-width: 100px;
+	height: auto;
+	margin-top : 10px;
+
+}
+
+header p
+{
+	text-align : center;
 }
