--- a/page2/assets2/style2.css
+++ b/page2/assets2/style2.css
@@ -1,5 +1,5 @@
 body  {
-	background-image = url(" page2/2.jpg");
+	background-image : url( ../.jpg);
 }
 
 nav ul li  {
@@ -10,7 +10,7 @@ nav ul li  {
 
 }
 a:hover {
-	background-color: green ;
+	background-color: coral;
 
 }
 
@@ -23,7 +23,7 @@ nav {
 nav ul #search a {
 	border: 1px solid black;
 	background-color: lightblue;
-	border-radius: 3px;
+	border-radius: 5px;
 }	
 nav ul #panier img {
 	
@@ -40,3 +40,22 @@ div {
 div a {
 	color: green;
 }
+
+section img {
+	width:200px;
+	height:200px;
+}
+footer {
+	display:block;
+	width:100%;
+	height:5%;
+	background-color: coral;
+}
+div {
+	position: absolute;
+	top:1000px;	
+	width:100%;
+	height:5%;
+	background-color: lightpink;
+}
+	
