--- a/page2/assets2/style2.css
+++ b/page2/assets2/style2.css
@@ -1,5 +1,5 @@
 body  {
-	background-image : url( ../.jpg);
+	background-image : url( ../fond.png);
 }
 
 nav ul li  {
@@ -36,7 +36,6 @@ nav ul #panier img {
 }
  
 
-
 section img {
 	width:200px;
 	height:200px;
@@ -54,19 +53,68 @@ div {
 	height:5%;
 	background-color: lightpink;
 }
- nav ul #search{
-	position : absolute;
-	top: 8px;
-	left : 854px;
-	background-color: 142b47;
-}
- nav ul #panier {
-	 position : absolute;
-	top: 8px;
-	left : 1100px;
 
- }
+
+
+ 
 	 
-	
+#panier, #search {
+		float:right;
+}
 
+
+div a {
+	color: green;
+}
+
+section img {
+	width:200px;
+	height:200px;
+}
+footer {
+	display:block;
+	width:100%;
+	height:5%;
+	background-color: coral;
+}
+
+
+footer img {
+	width:40px;
+	height:40px;
+	margin-right : 60px;
+}
+.modal{
+
+
+}
+
+.modal:before {
+	content:"";
+	position:fixed;
+	display:none;
+	background-color:rgba(0,0,0,.8);
+	top: 0;
+	left:0;
+	width:100%;
+}
+
+.modal-container{
+	position: fixed; 
+	background-color:#fff; 
+	left:50%;
+	max-width:500px;
+	padding: 20px;
+	border-radius:5px;
+	-webkit-transform:translate(-50%,-200%);
+	-ms-transform: translate (-50%,-200%);
+	transform:translate (-50%,-200%);
+	
+}
+p {
+	
+	margin-top:0px;
+}
+	
+	
 	
