--- a/page1/assets1/style1.css
+++ b/page1/assets1/style1.css
@@ -53,6 +53,16 @@ footer
 	background-color : SaddleBrown;
 }
 
+/* --------------------------------------- PARTIE CENTRALE --------------------------------------- */
+
+#msgbienvenue
+{
+	display : flex;
+	flex-direction : column-reverse;
+	justify-content : space-between;
+	align-items : center;
+}
+
 /* --------------------------------------- PARTIE PROMOTIONS --------------------------------------- */
 
 .promos
