--- a/page1/assets1/style1.css
+++ b/page1/assets1/style1.css
@@ -1,5 +1,5 @@
 
- *
+/* *
 {
 	border : 1px solid red;
 }
@@ -27,7 +27,7 @@ header
 	width : 100%;
 	height : 150px;
 	border-radius : 10px;
-	background-color : BurlyWood;
+	background-color : Lightblue;
 }
 
 main
@@ -36,6 +36,7 @@ main
 	width : 49%;
 	line-height : 600px;
 	text-align: center;
+	vertical-align: center;
 	margin-left : 1.2%;
 	height : 600px;
 	
@@ -50,18 +51,9 @@ footer
 	width : 100%;
 	height : 100px;
 	border-radius : 10px;
-	background-color : SaddleBrown;
+	background-color : SandyBrown;
 }
 
-/* --------------------------------------- PARTIE CENTRALE --------------------------------------- */
-
-#msgbienvenue
-{
-	display : flex;
-	flex-direction : column-reverse;
-	justify-content : space-between;
-	align-items : center;
-}
 
 /* --------------------------------------- PARTIE PROMOTIONS --------------------------------------- */
 
@@ -74,9 +66,11 @@ footer
 	float: right;
 	width : 24%;
 	text-align: center;
-	height : 597px;
-	border : 2px solid Maroon;
-	border-radius : 10px;
+	height : 560px;
+	border-left : 2px solid SandyBrown;
+	border-right: 2px solid SandyBrown;
+	margin-top : 20px;
+	
 	
 }
 
@@ -86,7 +80,8 @@ footer
 	flex-direction : column-reverse;
 	justify-content : space-between;
 	align-items: center;
-	height : 597px;
+	height : 590px;
+	
 }	
 
 #defilpromo img 
@@ -110,9 +105,11 @@ footer
 	float : left;
 	width : 24%;
 	text-align: center;
-	height : 597px;
-	border : 2px solid Maroon;
-	border-radius : 10px;
+	height : 560px;
+	border-left: 2px solid Lightblue;
+	border-right: 2px solid Lightblue;
+	margin-top : 20px;
+
 	
 }
 
@@ -122,7 +119,8 @@ footer
 	flex-direction : column-reverse;
 	justify-content : space-between;
 	align-items: center;
-	height : 597px;
+	height : 590px;
+
 }
 
 #defilimage img
@@ -149,24 +147,17 @@ footer
 }
 
 
-header p
-{
-	text-align : center;
-}
-
-
 .bienvenue 
 {
   display : inline-block;
   line-height : 120px;
-  
   color: maroon;
   font-family: lato;
   font-weight: 500;
   font-size: 50px;
   text-align: center;
   -webkit-animation: bounceIn 1.5s both 1s;
-  margin-top: 200px;
+
 }
 
 @-webkit-keyframes bounceIn{
