--- a/page5/assets5/style5.css
+++ b/page5/assets5/style5.css
@@ -2,7 +2,17 @@ body  {
 	background-image : url( ../fond.png);
 }
 
-
+header
+{
+	display : flex;
+	justify-content : center;
+	text-align: center;
+	align-items : center;
+	width : 100%;
+	height : 150px;
+	border-radius : 10px;
+	background-color : lightblue;
+}
 
 
 
@@ -20,7 +30,7 @@ a:hover {
 }
 
 nav {
-	background-color: lightblue;
+	background-color: lightgreen;
 	height:35px;
 	
 	
@@ -79,10 +89,14 @@ footer {
 	display:block;
 	width:100%;
 	height:5%;
-	background-color: coral;
+	background-color: sandybrown;	
+	margin-top:1000px;
 }
 
-
+section  {
+	margin-top:200px;
+	margin-left: 50px;
+}
 footer img {
 	width:40px;
 	height:40px;
