--- a/page2/assets2/style2.css
+++ b/page2/assets2/style2.css
@@ -106,14 +106,14 @@ header input
 	width: auto;
 }
 
-#search 
+form
 {
 	display : flex;
 	justify-content : center;
 	text-align: center;
 	align-items : center;
+	height: 100%;
 }
-
 
 
 header ul
