--- a/page1/assets1/style1.css
+++ b/page1/assets1/style1.css
@@ -1,4 +1,4 @@
-/* *
+*
 {
 	border : 1px solid red;
 }
@@ -60,10 +60,9 @@ footer
 	flex-direction : column-reverse;
 	justify-content : space-between;
 	align-items : center;
+	text-align: center;
 	float: right;
 	width : 24%;
-	text-align: center;
-	
 	
 	height : 560px;
 	border-left : 5px dotted SandyBrown;
@@ -98,9 +97,6 @@ footer
 
 .titrepromo
 {
-	display : inline-block;
-	width : 100%;
-	height : 100px;
 	
 	font-size : xx-large;
 	font-family : "GROBOLD";
@@ -155,7 +151,10 @@ footer
 
 .titreavis
 {
-	display : inline-block;
+	display : flex;
+	justify-content : center;
+	text-align: center;
+	align-items : center;
 	width : 100%;
 	height : 100px;
 	
@@ -163,12 +162,6 @@ footer
 	font-family : "GROBOLD";
 	
 	color : Brown;
-	display : flex;
-	justify-content : center;
-	text-align: center;
-	align-items : center;
-	width : 100%;
-	height : 100px;
 	
 	
 }
