--- a/page1/assets1/style1.css
+++ b/page1/assets1/style1.css
@@ -57,7 +57,7 @@ footer
 .promos
 {
 	display : flex;
-	flex-direction : column-reverse;
+	flex-direction : column;
 	justify-content : space-between;
 	align-items : center;
 	text-align: center;
@@ -75,7 +75,7 @@ footer
 .defilpromo
 {
 	display : flex;
-	flex-direction : column-reverse;
+	flex-direction : column;
 	justify-content : space-between;
 	align-items: center;
 	height : 460px;
@@ -123,7 +123,7 @@ footer
 .images
 {
 	display : flex;
-	flex-direction : column-reverse;
+	flex-direction : column;
 	justify-content : space-between;
 	align-items : center;
 	float : left;
@@ -140,7 +140,7 @@ footer
 #defilimage
 {
 	display : flex;
-	flex-direction : column-reverse;
+	flex-direction : column;
 	justify-content : space-between;
 	align-items: center;
 	height : 460px;
