--- a/page3/assets3/style3.css
+++ b/page3/assets3/style3.css
@@ -1,4 +1,4 @@
-*
+/*
 {
 	border : 0.5px solid black;
 }
@@ -258,7 +258,6 @@ footer div p
 	text-align: center;
 	align-items : center;
 	border : 3px solid red;
-	
 }
 
 .listeart
@@ -268,17 +267,49 @@ footer div p
 	justify-content : center;
 	text-align: center;
 	align-items : center;
-	border : 3px solid blue;
+	border-left: 5px dotted SandyBrown;
+	border-right: 5px dotted SandyBrown;
 	width : 75%;
-	padding-bottom: 50px;
+	margin-bottom: 50px;
+
 
 }
 
 .listeart img
 {
-	margin: 20px;
-	padding-bottom: 80px;
-	border : 3px solid SandyBrown;
+	height: auto;
+	width: 250px;
+	margin: 50px 50px 0px 50px;
+
+	border-top: 3px solid SandyBrown;
+	border-left: 3px solid SandyBrown;
+	border-right: 3px solid SandyBrown;
+}
+
+.listeart p
+{
+	width: 250px;
+	margin: 0px 52px 0px 52px;
+	font-family: "simplicity";
+	font-size: large;
+	font-weight: bold; 
+	color: maroon;
+	border-left: 3px solid SandyBrown;
+	border-right: 3px solid SandyBrown;
+
+	
+}
+
+.listeart .prix
+{
+	width: 250px;
+	margin: 0px 52px 0px 52px;
+	font-size: xx-large;
+	border-bottom: 3px solid SandyBrown;
+	border-left: 3px solid SandyBrown;
+	border-right: 3px solid SandyBrown;
+	font-weight: bolder; 
+	padding-top: 10px;
 }
 
 .titreart
@@ -293,6 +324,12 @@ footer div p
 	font-family : "simplicity";
 	color : Brown;	
 }
+
+.titreart p
+{
+	border-bottom: 3px solid SandyBrown;
+}
+
 
 #ordre
 {
