--- a/page9/assets9/style9.css
+++ b/page9/assets9/style9.css
@@ -248,3 +248,100 @@ footer div p
 }
 
 
+/* --------------------------------- LISTE ARTICLES ----------------------------------- */
+
+#articles
+{
+	display : flex;
+	flex-direction: column-reverse;
+	justify-content : center;
+	text-align: center;
+	align-items : center;
+}
+
+.listeart
+{
+	display : flex;
+	flex-wrap: wrap;
+	justify-content : center;
+	text-align: center;
+	align-items : center;
+	border-left: 5px dotted SandyBrown;
+	border-right: 5px dotted SandyBrown;
+	width : 75%;
+	margin-bottom: 50px;
+
+
+}
+
+.listeart img
+{
+	height: auto;
+	width: 250px;
+	margin: 50px 50px 0px 50px;
+
+	border-top: 3px solid SandyBrown;
+	border-left: 3px solid SandyBrown;
+	border-right: 3px solid SandyBrown;
+}
+
+.listeart p
+{
+	width: 250px;
+	margin: 0px 52px 0px 52px;
+	font-family: "simplicity";
+	font-size: large;
+	font-weight: bold; 
+	color: maroon;
+	border-left: 3px solid SandyBrown;
+	border-right: 3px solid SandyBrown;
+
+	
+}
+
+.listeart .prix
+{
+	width: 250px;
+	margin: 0px 52px 0px 52px;
+	font-size: xx-large;
+	border-bottom: 3px solid SandyBrown;
+	border-left: 3px solid SandyBrown;
+	border-right: 3px solid SandyBrown;
+	font-weight: bolder; 
+	padding-top: 10px;
+}
+
+.titreart
+{
+	display : flex;
+	justify-content : center;
+	text-align: center;
+	align-items : center;
+	width : 75%;
+	height : 100px;
+	font-size : 60px;
+	font-family : "simplicity";
+	color : Brown;	
+}
+
+.titreart p
+{
+	border-bottom: 3px solid SandyBrown;
+}
+
+
+#ordre
+{
+	display: inline-block;
+	width: 75%;
+}
+
+.lister
+{
+	float:left;
+}
+
+.trier
+{
+	float:right;
+}
