--- a/page2/assets2/style2.css
+++ b/page2/assets2/style2.css
@@ -54,6 +54,7 @@ body
 {
 	display : flex;
 	justify-content : center;
+	flex-wrap: wrap;
 	background-color: SandyBrown;
 	list-style:none;
 	width: 70%;
@@ -344,8 +345,9 @@ footer div p
 #listetop
 {
 	display : flex;
-	justify-content : space-between;
+	justify-content : space-around;
 	align-items: center;
+	flex-wrap: wrap;
 	height : 460px;
 	width: 75%;
 
@@ -380,7 +382,6 @@ footer div p
 	width: 200px;
 
 	border: 1px solid SandyBrown;
-	margin-bottom: 100px
 
 }
 
@@ -405,8 +406,9 @@ footer div p
 #listemeilleure
 {
 	display : flex;
-	justify-content : space-between;
+	justify-content : space-around;
 	align-items: center;
+	flex-wrap: wrap;
 	height : 460px;
 	width: 75%;
 
@@ -454,7 +456,7 @@ footer div p
 	float : left;
 	width : 100%;
 	text-align: center;
-	height : 560px;
+	height : 330px;
 	margin-top : 20px;
 
 	
@@ -463,10 +465,12 @@ footer div p
 #listevente
 {
 	display : flex;
-	justify-content : space-between;
+	justify-content : space-around;
 	align-items: center;
+	flex-wrap: wrap;
 	height : 460px;
 	width: 75%;
+	padding-bottom: 50px;
 
 }
 
@@ -495,8 +499,8 @@ footer div p
 #listevente img
 {
 	display : flex;
+
 	height : auto;
 	width: 270px;
-	margin-bottom: 200px;
 
 }
