--- a/page4/assets4/style4.css
+++ b/page4/assets4/style4.css
@@ -254,7 +254,7 @@ footer div p
 {
 	display : flex;
 	flex-direction: column-reverse;
-	justify-content : center;
+	justify-content : justify;
 	text-align: center;
 	align-items : center;
 }
@@ -263,7 +263,7 @@ footer div p
 {
 	display : flex;
 	flex-wrap: wrap;
-	justify-content : center;
+	justify-content : justify;
 	text-align: center;
 	align-items : center;
 	border-left: 5px dotted SandyBrown;
@@ -287,6 +287,7 @@ footer div p
 
 .listeart p
 {
+	
 	width: 250px;
 	margin: 0px 52px 0px 52px;
 	font-family: "simplicity";
